@@ -56,6 +56,8 @@ PHP                                                                        NEWS
   . Added readInnerXML(), readOuterXML(), readString(), setSchema(). (2.6.20+)
   . Changed to passing libxml options when loading reader.
 
+- Added PATHINFO_FILENAME option to pathinfo() to get the filename. (Toby S., 
+  Christian S.)
 - Added array_fill_keys(). (Marcus, Matthew Wilmas)
 - Added posix_initgroups() function. (Ilia)
 - Added an optional parameter to parse_url() to allow retrieval of distinct URL
